syntax = "proto3";

package user;

option go_package = "github.com/Vovarama1992/go-ai-messenger/proto/userpb;userpb";

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc GetUserByEmail (GetUserByEmailRequest) returns (GetUserByEmailResponse);
  rpc GetUserByID (GetUserByIDRequest) returns (GetUserByIDResponse);
}

message CreateUserRequest {
  string email = 1;
  string password_hash = 2;
}

message CreateUserResponse {
  int64 id = 1;
  string email = 2;
}

message GetUserByEmailRequest {
  string email = 1;
}

message GetUserByEmailResponse {
  int64 id = 1;
  string email = 2;
  string password_hash = 3;
}

message GetUserByIDRequest {
  int64 id = 1;
}

message GetUserByIDResponse {
  int64 id = 1;
  string email = 2;
  string password_hash = 3;
}